force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Contract_Name__c</fullName>
    <description>The related Shift’s Contract name, if any.</description>
    <formula>IF(sirenum__Shift__r.sirenum__Contract__c != NULL,
        sirenum__Shift__r.sirenum__Contract__r.Name,
        sirenum__Shift__r.sirenum__Team__r.sirenum__Account__r.Name)</formula>
    <inlineHelpText>The related Shift’s Contract name, if any.</inlineHelpText>
    <label>Contract</label>
    <type>Text</type>
</CustomField>