force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <description>The related Shift’s scheduled end time.</description>
    <formula>sirenum__Shift__r.sirenum__Scheduled_End_Time__c</formula>
    <inlineHelpText>The related Shift’s scheduled end time.</inlineHelpText>
    <label>Shift End Time</label>
    <type>DateTime</type>
</CustomField>