force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_Scheduling_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shift_Scheduling_Comments__c</fullName>
    <description>The related Shift’s scheduling comments, if any.</description>
    <formula>sirenum__Shift__r.sirenum__Scheduling_Comments__c</formula>
    <inlineHelpText>The related Shift’s scheduling comments, if any.</inlineHelpText>
    <label>Scheduling Comments</label>
    <type>Text</type>
</CustomField>