force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_Site_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Shift_Site_Latitude__c</fullName>
    <description>The related Shift’s Site’s latitude, if any.</description>
    <formula>sirenum__Shift__r.sirenum__Site__r.sirenum__Coordinates__Latitude__s</formula>
    <inlineHelpText>The related Shift’s Site’s latitude, if any.</inlineHelpText>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>