force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_Site_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Shift_Site_Street_Address__c</fullName>
    <description>The related Shift’s Site’s street address, if any.</description>
    <formula>sirenum__Shift__r.sirenum__Site__r.sirenum__Street_Address__c</formula>
    <inlineHelpText>The related Shift’s Site’s street address, if any.</inlineHelpText>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>