force-app/main/default/objects/sirenum__Shift_Invitation__c/fields/Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start_Time__c</fullName>
    <description>The related Shift’s scheduled start time.</description>
    <formula>sirenum__Shift__r.sirenum__Scheduled_Start_Time__c</formula>
    <inlineHelpText>The related Shift’s scheduled start time.</inlineHelpText>
    <label>Shift Start Time</label>
    <type>DateTime</type>
</CustomField>